# Vincentvlb

./: .gitignore  README.generated.md  README.md  profile.yaml  pyproject.toml
docs/navx/: index.html
src/github_profile/: cli.py  loader.py  models.py
src/github_profile/generators/: html.py  readme.py  svg.py
templates/: README.md.j2  engineering-cycle.svg.j2  engineering-profile.svg.j2  hero.svg.j2  highlights-header.svg.j2  navx-card.svg.j2  navx-viewer.html.j2  qfield-card.svg.j2  technical-stack.svg.j2  vision-pipeline-card.svg.j2
templates/components/: svg-header.j2
tests/: test_loader.py  test_readme_generator.py  test_svg_generator.py
