[project]
name = "github_profile"
version = "0.1.0"
description = "GitHub profile generator for Vincent Lambert"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[project.scripts]
profile = "github_profile.cli:app"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "github_profile"

[dependency-groups]
dev = [
    "mypy>=2.0.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
    "types-pyyaml>=6.0.12.20260518",
]
